2006-01-10  Paul Eggert  <eggert@cs.ucla.edu>

	* getaddrinfo.m4, localcharset.m4, md5.m4: Sync from gnulib.

2006-01-10  Jim Meyering  <jim@meyering.net>

	* fpending.m4: Also include <stdio.h>, for Dragonfly.
	Patch by Joerg Sonnenberger.

2006-01-06  Paul Eggert  <eggert@cs.ucla.edu>

	* lib-ignore.m4: New file.

2006-01-01  Paul Eggert  <eggert@cs.ucla.edu>

	* chmod-safer.m4: Remove.
	* lchmod.m4: New file.
	* jm-macros.m4 (gl_MACROS): Require gl_FUNC_LCHMOD.
	Don't require gl_CHDIR_SAFER.

2005-12-21  Jim Meyering  <jim@meyering.net>

	* chdir-safer.m4: New file.
	* jm-macros.m4: Require gl_CHDIR_SAFER.

2005-12-05  Andreas Gruenbacher  <agruen@suse.de>

	* acl.m4 (AC_FUNC_ACL): Add POSIX ACL and Linux-specific acl tests.

2005-12-14  Jim Meyering  <jim@meyering.net>

	* fprintftime.m4: New file.
	* jm-macros.m4: Require gl_FPRINTFTIME.

2005-12-13  Paul Eggert  <eggert@cs.ucla.edu>

	* stdbool.m4 (AM_STDBOOL_H): Substitute HAVE__BOOL again, reverting
	2005-11-25 change.
	(AC_HEADER_STDBOOL): Check for buggy compiler that
	has _Bool but mishandles _Bool |= _Bool.

2005-12-07  Paul Eggert  <eggert@cs.ucla.edu>

	* stat-time.m4 (gl_STAT_TIME): Add check for
	TYPEOF_STRUCT_STAT_ST_ATIM_IS_STRUCT_TIMESPEC, to fix IRIX 5.3
	porting problem reported by Georg Schwarz in
	<http://lists.gnu.org/archive/html/bug-coreutils/2005-12/msg00083.html>.

2005-12-02  Paul Eggert  <eggert@cs.ucla.edu>

	* socklen.m4 (gl_TYPE_SOCKLEN_T): Renamed from gl_SOCKLEN_T.
	Use implementation from Albert Chin, with some
	comments/corrections by Stepan Kasal and myself.
	* jm-macros.m4 (gl_MACROS): Adjust to renaming.

2005-12-01  Paul Eggert  <eggert@cs.ucla.edu>

	* regex.m4 (gl_REGEX): Check whether off_t can be used in a switch
	statement, to work around an HP-UX 10.20 compiler bug reported by
	Peter O'Gorman.

2005-12-01  Bruno Haible  <bruno@clisp.org>

	Import from gnulib.
	* mbchar.m4 (gl_MBCHAR): Check for wchar.h and wctype.h. Don't compile
	mbchar.c if they are not both present.