@@ -1,6 +1,10 @@
 2006-01-10  Paul Eggert  <eggert@cs.ucla.edu>
 
-	* getaddrinfo.m4, localcharset.m4, md5.m4: Sync from gnulib.
+	* argmatch.m4 (gl_ARGMATCH): Don't require gl_FUNC_MEMCMP, for the
+	sake of packages that don't want to worry about ancient systems.
+
+	* getaddrinfo.m4, localcharset.m4, md5.m4, memcoll.m4:
+	Sync from gnulib.
 
 2006-01-10  Jim Meyering  <jim@meyering.net>
 
